data/derived/sp14/progs/unify/prog1013.ml.out
Characters 0-9:
  (log 0.1) / (log 10.0);;
  ^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
